# apfs-forensic

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md  clippy.toml  deny.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/src/: btree.rs  bytes.rs  checkpoint.rs  compression.rs  container.rs  dir.rs  encryption.rs  extent.rs  fsrecord.rs  fusion.rs  inode.rs  lib.rs  object.rs  omap.rs  reaper.rs  sealed.rs  snapshot.rs  spaceman.rs  vfs.rs  volume.rs  xattr.rs
core/tests/: btree.rs  btree_descend.rs  checkpoint.rs  compression.rs  container.rs  container_open.rs  dir.rs  extent.rs  fsrecord.rs  inode.rs  keyed_nav.rs  object.rs  omap.rs  reaper.rs  snapshot.rs  spaceman.rs  vfs_apfs.rs  volume.rs  volume_resolve.rs  xattr.rs
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-build-apfs-reader-from-scratch.md  0002-core-forensic-workspace-split.md  0003-crate-naming-under-import-collision.md  0004-reuse-fleet-decmpfs-codec-stack.md  0005-forensicnomicon-knowledge-and-report-model.md  0006-optional-forensic-vfs-adapter.md  0007-fail-loud-on-bootstrap-and-unsupported-tiers.md  0008-paranoid-gatekeeper-forbid-unsafe-panic-free-fuzzed.md  0009-low-msrv-with-pinned-dev-toolchain.md  0010-release-plz-pr-based-library-publishing.md
docs/plans/: 2026-06-21-apfs-forensic-design.md
forensic/: CHANGELOG.md  Cargo.toml
forensic/src/: clones.rs  crypto.rs  integrity.rs  lib.rs  recovery.rs  sealed.rs  snapshots.rs  timestamps.rs
forensic/tests/: analyzers.rs  audit.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: btree_node.rs  fsrecord.rs  fuzz_forensic.rs  nx_superblock.rs  object.rs
supply-chain/: config.toml
tests/data/: README.md
