[workspace]
resolver = "2"
members = ["core", "forensic"]

# Single source of truth for fields shared (identical) by every member (DRY).
# `version` is NOT hoisted: core and forensic are versioned independently, so
# each keeps its own `version` inline.
[workspace.package]
edition = "2021"
rust-version = "1.85"          # low, CI-verified MSRV — these are published libraries
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/apfs-forensic"
homepage = "https://github.com/SecurityRonin/apfs-forensic"
authors = ["Albert Hui <albert@securityronin.com>"]
categories = ["parser-implementations", "filesystem"]
readme = "README.md"

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`. The inter-crate `apfs-core` version
# lives here too, so a bump touches one line instead of every member.
[workspace.dependencies]
# Reader crate published as `apfs-core` with `[lib] name = "apfs_core"` so the
# import path does not collide with the unrelated third-party `apfs` crate.
apfs-core = { path = "core", version = "0.2.2", package = "apfs-core" }
# KNOWLEDGE layer: magics, type codes, decmpfs map, and the shared report model.
forensicnomicon = "1"
thiserror = "2"
bitflags = "2"
chrono = "0.4"
# decmpfs transparent-compression codec stack (REUSE — see hfsplus-forensic):
#   zlib/DEFLATE (types 3/4), LZVN (types 7/8, length-tolerant), LZFSE (types 11/12).
# All pure-Rust, keeping `unsafe_code = "forbid"` intact.
flate2 = "1"
lzfse_rust = "0.2"
# Length-tolerant LZVN decoder — OUR fleet crate (SecurityRonin `lzvn-core`,
# `[lib] name = "lzvn"`), the one hfsplus-forensic validated 25/25 on real macOS
# Tahoe data. The bare `lzvn` crate on crates.io is an unrelated third party
# (Reverier-Xu) with a `decode_raw` API and no decmpfs trailing-byte tolerance.
lzvn = { version = "0.1", package = "lzvn-core" }
# Test-only: SHA-256 for the byte-identical macOS `cp` oracle reconciliation.
sha2 = "0.10"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all                      = { level = "warn", priority = -1 }
pedantic                 = { level = "warn", priority = -1 }
correctness              = { level = "deny", priority = -1 }
suspicious               = { level = "deny", priority = -1 }
unwrap_used              = { level = "deny", priority = 0 }
expect_used              = { level = "deny", priority = 0 }
module_name_repetitions  = { level = "allow", priority = 1 }
must_use_candidate       = { level = "allow", priority = 1 }
missing_errors_doc       = { level = "allow", priority = 1 }
missing_panics_doc       = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap       = { level = "allow", priority = 1 }
cast_sign_loss           = { level = "allow", priority = 1 }
cast_precision_loss      = { level = "allow", priority = 1 }
too_many_lines           = { level = "allow", priority = 1 }
items_after_statements   = { level = "allow", priority = 1 }
similar_names            = { level = "allow", priority = 1 }
manual_let_else          = { level = "allow", priority = 1 }
